Fixed alignment issues

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,5 @@
 .card {
   margin: auto;
-  margin-top: 15vh;
   margin-left: 10vh;
   margin-right: 10vh;
   transform-style: preserve-3d;
